# AquaControl

./: .gitignore  README.md  sw
hw/: .gitignore  ESP32 Pins (copy 2).xlsx  ESP32 Pins.xlsx
hw/ledBoard/: #auto_saved_files#  FB_devider.xlsx  buck-lib.kicad_sym  buck.xlsx  fp-lib-table  ledBoard.kicad_pcb  ledBoard.kicad_pro  ledBoard.kicad_sch  sym-lib-table
hw/mainBoard/: #auto_saved_files#  connectors.kicad_sch  eps32.kicad_sch  fp-lib-table  mainBoard.kicad_pcb  mainBoard.kicad_pro  mainBoard.kicad_sch  peripherials.kicad_sch  power_suply.kicad_sch  sym-lib-table  ~mainBoard.kicad_pcb.lck
hw/parts/: SRN8040-101M.SLDPRT
hw/peripherialModule/: connectors.kicad_sch  fp-lib-table  peripherialModule.kicad_pcb  peripherialModule.kicad_pro  peripherialModule.kicad_sch
latex/: BakalarkaObhajoba.tex  CharvotBakalarka2023.tex  CharvotBakalarka2023.xml  CharvotBakalarka2024.tex  SemestralkaObhajoba.tex  main.tex  nastaveni.tex  poznamky.tex  thesis.sty
latex/Poznamky/: customarticle.cls
sw/: CAN_Adresses.xlsx  PIC_pin_allocation.xlsx
sw/mainModule/main/: CAN_driver.c  CAN_driver.h  CMakeLists.txt  config_manager.c  config_manager.h  control_routines.c  control_routines.h  debug_functions.c  debug_functions.h  globals.h  led_board_driver.c  led_board_driver.h  main.c  pins.h  relays_driver.c  relays_driver.h  status_control.c  status_control.h  status_leds_driver.c  status_leds_driver.h  temp_sensor_driver.c  temp_sensor_driver.h  time_driver.c  time_driver.h  water_level_sensor_driver.c  water_level_sensor_driver.h  wifi_driver.c  wifi_driver.h
(+490 files in other folders)
